Updated the class sequence