@@ -6,17 +6,17 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-public class FactoryExample1 {
+public class FactoryExample6 {
 	public static void main(String[] args) {
-		Integer[] integer = { 1, 2, 3, 4 };
+		Integer[] integers = { 1, 2, 3, 4 };
 
 //		ArrayList<Integer> list1 = (ArrayList<Integer>) Arrays.asList(1, 2, 3);//Arrays$ArrayList being assined to ArrayList java.lang.ClassCastException:
 
 		List<String> list = new ArrayList<String>();
 		ArrayList<String> arrayList = (ArrayList<String>) list;
 
-		List<Integer> list2 = Arrays.asList(integer);// fixed size list
-		List<Integer> list3 = List.of(integer);// immutable list
+		List<Integer> list2 = Arrays.asList(integers);// fixed size list
+		List<Integer> list3 = List.of(integers);// immutable list
 		List<Integer> list4 = List.copyOf(list3);// immutable list
 		List<Integer> list5 = List.of();// empty immutable list
 
@@ -27,6 +27,7 @@ public class FactoryExample1 {
 
 		list2.set(0, 11);// [11, 2, 3, 4]
 		System.out.println(list2);// [11, 2, 3, 4]
+		System.out.println(integers);//[11, 2, 3, 4]
 //		list3.set(0, 11);//java.lang.UnsupportedOperationException
 //		list4.set(0, 11);//java.lang.UnsupportedOperationException
 //--------------------------------------------------------------------------------		
